adding tomee plugin : mvn package tomee:run

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,15 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            
+            <plugin>
+                <groupId>org.apache.tomee.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>7.1.0</version>
+                <configuration>
+                    <tomeeVersion>7.1.0</tomeeVersion>
+                    <tomeeClassifier>plus</tomeeClassifier>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
